tests/sema/fail/borrow_mut_conflict.kl
int main() {
  int a = 1;
  &mut a;
  &a;
  return 0;
}
